add api get reject-data action record
